--- a/films.html
+++ b/films.html
@@ -4,6 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>Liste des films star wars</title>
+    <style>
+        body {
+            background-image: url('back-ground.jpg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
