Simple vue app (#1)
* vue app init

--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
-<html lang="fr">
-
-<head>
-    <meta charset="utf-8">
-    <title>Liste des films star wars</title>
-    <style>
-        body {
-            background-image: url('back-ground.jpg');
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: cover;
-        }
-    </style>
-</head>
-
-<body>
-    <h1 id="liste_des_films_star_wars">Liste des films star wars:</h1>
-    <ul>
-        <li><strong>A New Hope</strong>, épisode 4, <em>1977-05-25</em>, George Lucas</li>
-        <li><strong>The Empire Strikes Back</strong>, épisode 5, <em>1980-05-17</em>, Irvin Kershner</li>
-        <li><strong>Return of the Jedi</strong>, épisode 6, <em>1983-05-25</em>, Richard Marquand</li>
-        <li><strong>The Phantom Menace</strong>, épisode 1, <em>1999-05-19</em>, George Lucas</li>
-        <li><strong>Attack of the Clones</strong>, épisode 2, <em>2002-05-16</em>, George Lucas</li>
-        <li><strong>Revenge of the Sith</strong>, épisode 3, <em>2005-05-19</em>, George Lucas</li>
-    </ul>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <title>Liste des films star wars in vue.js</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
